<resources>
    <string name="app_name">Weather_Geta</string>
    <!-- 天気 -->
    <string name="sunny_kan">晴れ</string>
    <string name="sunny">はれ</string>
    <string name="cloud_kan">曇り</string>
    <string name="cloud">くもり</string>
    <string name="lain_kan">雨</string>
    <string name="lain">あめ</string>
    <string name="thunder_kan">雷</string>
    <string name="thunder">かみなり</string>
    
    <!-- オプションメニュー -->
    <string name="description">説明</string>
    <string name="setting">設定</string>
    <string name="privacy">プライバシーポリシーなど</string>
    <string name="privacy_description">[プライバシーポリシー]\n[使用素材]\nについてのページを開きます。\nよろしいですか？</string>
    <string name="enquete">アンケート箱</string>
    <string name="enquete_description">[アンケート箱]\nについてのページを開きます。\nよろしいですか？</string>

    <!-- URL -->
    <string name="privacy_url">http://</string>
    <string name="enquete_url">http://</string>

    <!-- 天気系 -->
    <string name="output_weather">場所：%s\n天気：%s</string>

    <!-- 広告系 -->
    <string name="adsID_banner">1000</string>
    <string name="adsID_popup">1000</string>
    <string name="adsKey">1000</string>

    <!-- 設定のダイアログの表示 -->
    <string name="setting_view">表示</string>
    <string name="setting_view_1">ひらがな\t</string>
    <string name="setting_view_2">漢字\t</string>
    <string name="setting_net">ネットワークの使用</string>
    <string name="setting_net_on">する</string>
    <string name="setting_net_off">しない</string>

</resources>
