<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu1"
            android:title="@string/description"
            android:icon="@drawable/icon_leaf_256"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu2"
            android:title="@string/setting"
            android:icon="@drawable/icon_gear_256"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu3"
            android:title="@string/privacy"
            android:icon="@drawable/icon_document_256"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu4"
            android:title="@string/enquete"
            android:icon="@drawable/icon_document_256"
            app:showAsAction="ifRoom"/>

</menu>